# pp-ocrv5-trt

./: .gitignore  PLAN.md  README.md  benchmark.py  pyproject.toml
pp_ocrv5_trt/: __init__.py  cli.py  export.py  pipeline.py  processing.py  runtime.py
test_output/: server_det.onnx  server_rec.onnx
